--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/styles.css">
 	<title>Assignment Solution for Module 2.</title>
 </head>
 <body>
-<h1>Our menu.</h1>>
+<h1>Our menu</h1>
 </body>
 </html>
