--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -6,6 +6,20 @@
 	<title>Assignment Solution for Module 2.</title>
 </head>
 <body>
-<h1>Our menu</h1>
+<h1>Our Menu</h1>
+<div>
+	<p class="firstline">
+		<span id="chicken">Chicken</span>
+		This is the menu for chicken.
+	</p>
+	<p class="firstline">
+		<span id="beef">Beef</span>
+		This is the menu for beef.
+	</p>
+	<p class="secondline">
+		<span id="sushi">Sushi</span>
+		This is not the menu for chicken or beef.
+	</p>
+</div>>
 </body>
 </html>
