--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -10,16 +10,16 @@
 <div>
 	<p class="firstline">
 		<span id="chicken">Chicken</span>
-		This is the menu for chicken.
+		<br>This is the menu for chicken.
 	</p>
 	<p class="firstline">
 		<span id="beef">Beef</span>
-		This is the menu for beef.
+		<br>This is the menu for beef.
 	</p>
 	<p class="secondline">
 		<span id="sushi">Sushi</span>
-		This is not the menu for chicken or beef.
+		<br>This is not the menu for chicken or beef.
 	</p>
-</div>>
+</div>
 </body>
 </html>
