--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -10,7 +10,7 @@
 <div>
 	<p class="firstline">
 		<span id="chicken">Chicken</span>
-		<br>This is the menu for chicken.
+		<br>This is a sneaky change in the text.
 	</p>
 	<p class="firstline">
 		<span id="beef">Beef</span>
