--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -10,15 +10,15 @@
 <div>
 	<p class="firstline">
 		<span id="chicken">Chicken</span>
-		<br>This is another sneaky change in the text.
+		<br>Spacing: Pay attention to the spacing shown in the mockup illustrations. Note the spacing between sections (both horizontal and vertical). Note the horizontal spacing between the edges of the section and the edges of the browser window. Also, note the spacing between the dummy text in each section and the edges of the section. Lastly, make sure the dummy text is "pushed down" enough so it doesn't overlap the section title region.
 	</p>
 	<p class="firstline">
 		<span id="beef">Beef</span>
-		<br>This is the menu for beef.
+		<br>Borders and Colors: Each section should have a background color set to some color (of your choosing). Set the background color of each section title region to some unique color (of your choosing). Make sure that the background color still allows the user to view the text in the section and section title regions. Depending on the color you choose, you may want to change the color of the text so it can be easy to read. Set a black border on both the section and section title region that is 1px thick. 
 	</p>
 	<p class="secondline">
 		<span id="sushi">Sushi</span>
-		<br>This is not the menu for chicken or beef.
+		<br>(OPTIONAL) You will NOT be graded on this, but you may want to explicitly set a font-family for the text in your page, so you are not stuck with the default browser font family. Also, set the font size of the heading and section title to be 75% larger and 25% larger (respectively) than the font size of the dummy text.
 	</p>
 </div>
 </body>
